--- a/youtube/index.html
+++ b/youtube/index.html
@@ -9,14 +9,15 @@
 			<title>Vite SSR + Preact</title>
 		</head>
 		<body>
-			<div id="app"><div>Hi<a href="/login">Login</a></div></div>
+			<div id="app"><div><div><div id></div></div><button>Play</button></div></div>
 		  <script type="module" src="/assets/entries/entry-server-routing.92c67a98.js" defer></script>
-		  <link rel="modulepreload" href="/assets/entries/pages_index.page.b6438b36.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/pages_youtube.page.84855389.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-d926cccb.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.6397c294.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-b7a814aa.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/chunks/chunk-7db91922.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.6397c294.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.server.extractAssets.877db8d3.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-7fb35581.js" as="script" type="text/javascript">
-		  <script id="vike_pageContext" type="application/json">{"pageProps":"!undefined","urlPathname":"/","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitHasClientData":"!undefined","_pageId":"/pages/index"}</script>
+		  <script id="vike_pageContext" type="application/json">{"pageProps":"!undefined","urlPathname":"/youtube","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitHasClientData":"!undefined","_pageId":"/pages/youtube"}</script>
 		</body>
 		</html>
