--- a/login/index.html
+++ b/login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 		<html lang="en">
 		<head>
-		  <link rel="stylesheet" type="text/css" href="/assets/static/default.page.server.626d6ae0.css">
+		  <link rel="stylesheet" type="text/css" href="/assets/static/default.page.server.9834a493.css">
 			<meta charset="UTF-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 			<meta name="color-scheme" content="light dark" />
@@ -9,13 +9,13 @@
 			<title>Vite SSR + Preact</title>
 		</head>
 		<body>
-			<div id="app"><div>Test <br/><br/>/login<br/><br/><input type="text" class="border-2 bg-white text-black" value/></div></div>
-		  <script type="module" src="/assets/entries/entry-server-routing.f4c97732.js" defer></script>
-		  <link rel="modulepreload" href="/assets/entries/pages_login.page.a2c3ce4c.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/chunks/chunk-579008d6.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/chunks/chunk-36e833d0.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.b957c814.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.server.extractAssets.602c4cfb.js" as="script" type="text/javascript">
+			<div id="app"><div>Test <br/><br/>/login<br/><br/><input type="text" value class="border-2 bg-white text-black"/></div></div>
+		  <script type="module" src="/assets/entries/entry-server-routing.92c67a98.js" defer></script>
+		  <link rel="modulepreload" href="/assets/entries/pages_login.page.df3b229f.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/chunks/chunk-b7a814aa.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/chunks/chunk-d926cccb.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.6397c294.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.server.extractAssets.877db8d3.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-7fb35581.js" as="script" type="text/javascript">
 		  <script id="vike_pageContext" type="application/json">{"pageProps":"!undefined","urlPathname":"/login","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitHasClientData":"!undefined","_pageId":"/pages/login"}</script>
 		</body>
