--- a/search/index.html
+++ b/search/index.html
@@ -9,14 +9,15 @@
 			<title>Vite SSR + Preact</title>
 		</head>
 		<body>
-			<div id="app"><div>Hi<a href="/login">Login</a></div></div>
+			<div id="app"><div class="m-4"><input type="text" placeholder="Search for a song..." value class="mb-4 w-full rounded-md border border-zinc-600 px-4 py-2"/><ul></ul></div></div>
 		  <script type="module" src="/assets/entries/entry-server-routing.92c67a98.js" defer></script>
-		  <link rel="modulepreload" href="/assets/entries/pages_index.page.b6438b36.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/chunks/chunk-d926cccb.js" as="script" type="text/javascript">
-		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.6397c294.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/pages_search.page.d4c0c6fe.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-b7a814aa.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/chunks/chunk-d926cccb.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/chunks/chunk-7db91922.js" as="script" type="text/javascript">
+		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.client.6397c294.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/entries/renderer_default.page.server.extractAssets.877db8d3.js" as="script" type="text/javascript">
 		  <link rel="modulepreload" href="/assets/chunks/chunk-7fb35581.js" as="script" type="text/javascript">
-		  <script id="vike_pageContext" type="application/json">{"pageProps":"!undefined","urlPathname":"/","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitHasClientData":"!undefined","_pageId":"/pages/index"}</script>
+		  <script id="vike_pageContext" type="application/json">{"pageProps":"!undefined","urlPathname":"/search","abortReason":"!undefined","_urlRewrite":null,"_urlRedirect":"!undefined","abortStatusCode":"!undefined","_abortCall":"!undefined","_pageContextInitHasClientData":"!undefined","_pageId":"/pages/search"}</script>
 		</body>
 		</html>
